tests/paczka1/fuzzy1/94955808.err
Error in line 2: 1i2zqfQf S425 13,82
Error in line 1: 1i2zqfQf A266 28,7
Error in line 4: 1i2zqfQf S425 65,7
Error in line 6: S569 S569 82,9
Error in line 9: 1i2zqfQf A266 -2,2
Error in line 21: S569 S425 28,2
Error in line 22: lU5bVi5byy3 S569 2,6
Error in line 16: 2vF5yJpDHS S425 146,6
Error in line 15: 7t04oKfu S569 41,6
Error in line 30: 7t04oKfu A266 13,4
Error in line 32: jXlkKLNqf A266 74,1
Error in line 36: jXlkKLNqf S569 46,3
